--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -119,5 +119,31 @@
   "learnMore": "معرفة المزيد",
   "friendActivity": "نشاط الأصدقاء",
   "viewProfile": "عرض الملف الشخصي",
-  "retry": "إعادة المحاولة"
+  "retry": "إعادة المحاولة",
+  "userName": "اسم المستخدم",
+  "writeNewMessage": "كتابة رسالة جديدة",
+  "startConversation": "بدء محادثة مع شخص ما",
+  "startNewThread": "بدء موضوع جديد",
+  "startTopicDiscussion": "بدء مناقشة حول موضوع",
+  "startGroupChat": "بدء محادثة جماعية",
+  "chatWithMultiplePeople": "الدردشة مع عدة أشخاص",
+  "addYourBusiness": "أضف عملك",
+  "newTrip": "رحلة جديدة",
+  "createGroup": "إنشاء مجموعة",
+  "createThread": "إنشاء موضوع",
+  "addRecipe": "إضافة وصفة",
+  "addNewContent": "إضافة محتوى جديد",
+  "tapPlusToGetStarted": "انقر فوق زر + للبدء",
+  "business": "عمل",
+  "event": "حدث",
+  "trip": "رحلة",
+  "group": "مجموعة",
+  "thread": "موضوع",
+  "recipe": "وصفة",
+  "people": "أشخاص",
+  "sportsTeams": "فرق رياضية",
+  "springEquinox": "الاعتدال الربيعي",
+  "summerSolstice": "الانقلاب الصيفي",
+  "autumnEquinox": "الاعتدال الخريفي",
+  "winterSolstice": "الانقلاب الشتوي"
 }
