--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -137,5 +137,31 @@
   "learnMore": "Learn More",
   "friendActivity": "Friend Activity",
   "viewProfile": "View Profile",
-  "retry": "Retry"
+  "retry": "Retry",
+  "userName": "User Name",
+  "writeNewMessage": "Write a New Message",
+  "startConversation": "Start a conversation with someone",
+  "startNewThread": "Start a New Thread",
+  "startTopicDiscussion": "Start a topic-based discussion",
+  "startGroupChat": "Start a Group Chat",
+  "chatWithMultiplePeople": "Chat with multiple people",
+  "addYourBusiness": "Add Your Business",
+  "newTrip": "New Trip",
+  "createGroup": "Create Group",
+  "createThread": "Create Thread",
+  "addRecipe": "Add Recipe",
+  "addNewContent": "Add New Content",
+  "tapPlusToGetStarted": "Tap the + button above to get started",
+  "business": "Business",
+  "event": "Event",
+  "trip": "Trip",
+  "group": "Group",
+  "thread": "Thread",
+  "recipe": "Recipe",
+  "people": "People",
+  "sportsTeams": "Sports Teams",
+  "springEquinox": "Spring Equinox",
+  "summerSolstice": "Summer Solstice",
+  "autumnEquinox": "Autumn Equinox",
+  "winterSolstice": "Winter Solstice"
 }
