--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -119,5 +119,31 @@
   "learnMore": "Saber Más",
   "friendActivity": "Actividad de Amigos",
   "viewProfile": "Ver Perfil",
-  "retry": "Reintentar"
+  "retry": "Reintentar",
+  "userName": "Nombre de Usuario",
+  "writeNewMessage": "Escribir un Nuevo Mensaje",
+  "startConversation": "Iniciar una conversación con alguien",
+  "startNewThread": "Iniciar un Nuevo Hilo",
+  "startTopicDiscussion": "Iniciar una discusión por tema",
+  "startGroupChat": "Iniciar un Chat Grupal",
+  "chatWithMultiplePeople": "Chatear con varias personas",
+  "addYourBusiness": "Agregar tu Negocio",
+  "newTrip": "Nuevo Viaje",
+  "createGroup": "Crear Grupo",
+  "createThread": "Crear Hilo",
+  "addRecipe": "Agregar Receta",
+  "addNewContent": "Agregar Nuevo Contenido",
+  "tapPlusToGetStarted": "Toca el botón + para comenzar",
+  "business": "Negocio",
+  "event": "Evento",
+  "trip": "Viaje",
+  "group": "Grupo",
+  "thread": "Hilo",
+  "recipe": "Receta",
+  "people": "Personas",
+  "sportsTeams": "Equipos Deportivos",
+  "springEquinox": "Equinoccio de Primavera",
+  "summerSolstice": "Solsticio de Verano",
+  "autumnEquinox": "Equinoccio de Otoño",
+  "winterSolstice": "Solsticio de Invierno"
 }
