--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -119,5 +119,31 @@
   "learnMore": "En Savoir Plus",
   "friendActivity": "Activité des Amis",
   "viewProfile": "Voir le Profil",
-  "retry": "Réessayer"
+  "retry": "Réessayer",
+  "userName": "Nom d'Utilisateur",
+  "writeNewMessage": "Écrire un Nouveau Message",
+  "startConversation": "Commencer une conversation avec quelqu'un",
+  "startNewThread": "Démarrer un Nouveau Fil",
+  "startTopicDiscussion": "Démarrer une discussion thématique",
+  "startGroupChat": "Démarrer un Chat de Groupe",
+  "chatWithMultiplePeople": "Discuter avec plusieurs personnes",
+  "addYourBusiness": "Ajouter Votre Entreprise",
+  "newTrip": "Nouveau Voyage",
+  "createGroup": "Créer un Groupe",
+  "createThread": "Créer un Fil",
+  "addRecipe": "Ajouter une Recette",
+  "addNewContent": "Ajouter du Nouveau Contenu",
+  "tapPlusToGetStarted": "Appuyez sur le bouton + pour commencer",
+  "business": "Entreprise",
+  "event": "Événement",
+  "trip": "Voyage",
+  "group": "Groupe",
+  "thread": "Fil",
+  "recipe": "Recette",
+  "people": "Personnes",
+  "sportsTeams": "Équipes Sportives",
+  "springEquinox": "Équinoxe de Printemps",
+  "summerSolstice": "Solstice d'Été",
+  "autumnEquinox": "Équinoxe d'Automne",
+  "winterSolstice": "Solstice d'Hiver"
 }
