--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -119,5 +119,31 @@
   "learnMore": "Saiba Mais",
   "friendActivity": "Atividade dos Amigos",
   "viewProfile": "Ver Perfil",
-  "retry": "Tentar Novamente"
+  "retry": "Tentar Novamente",
+  "userName": "Nome de Usuário",
+  "writeNewMessage": "Escrever uma Nova Mensagem",
+  "startConversation": "Iniciar uma conversa com alguém",
+  "startNewThread": "Iniciar um Novo Tópico",
+  "startTopicDiscussion": "Iniciar uma discussão sobre um tópico",
+  "startGroupChat": "Iniciar um Chat em Grupo",
+  "chatWithMultiplePeople": "Conversar com várias pessoas",
+  "addYourBusiness": "Adicionar Seu Negócio",
+  "newTrip": "Nova Viagem",
+  "createGroup": "Criar Grupo",
+  "createThread": "Criar Tópico",
+  "addRecipe": "Adicionar Receita",
+  "addNewContent": "Adicionar Novo Conteúdo",
+  "tapPlusToGetStarted": "Toque no botão + para começar",
+  "business": "Negócio",
+  "event": "Evento",
+  "trip": "Viagem",
+  "group": "Grupo",
+  "thread": "Tópico",
+  "recipe": "Receita",
+  "people": "Pessoas",
+  "sportsTeams": "Equipes Esportivas",
+  "springEquinox": "Equinócio de Primavera",
+  "summerSolstice": "Solstício de Verão",
+  "autumnEquinox": "Equinócio de Outono",
+  "winterSolstice": "Solstício de Inverno"
 }
