docs: Complete task 2 & 3 - Add ADRs & document undocumented features
This commit completes objectives 2 and 3 from the immediate tasks:
✅ Task 2: Document architectural decisions (ADRs)
✅ Task 3: Document undocumented features in PRD/FSD

ARCHITECTURE DECISION RECORDS (ADRs):

Created comprehensive ADR documentation:
- docs/architecture/decisions/ADR-001-mixed-state-management.md (600+ lines)
  - Documents Provider + BLoC hybrid approach
  - Clear guidelines on when to use each pattern
  - Industry precedent and best practices
  - Implementation examples and decision tree

- docs/architecture/decisions/ADR-002-bloc-wiring-strategy.md (500+ lines)
  - Defines app-level vs screen-level BLoC provision
  - Decision tree for BLoC wiring
  - Lazy vs eager initialization strategy
  - Memory and performance considerations

- docs/architecture/decisions/README.md (450+ lines)
  - ADR index and quick reference guide
  - Templates and best practices
  - Review checklist and lifecycle
  - Contributing guidelines

KEY DECISIONS DOCUMENTED:

1. Mixed State Management (ADR-001):
   - ✅ ACCEPTED: Maintain Provider + BLoC hybrid approach
   - Provider for: Simple UI state (theme, locale, onboarding)
   - BLoC for: Complex business logic (auth, gamification, venues, payments)
   - Rationale: Pragmatic, zero risk, industry-proven pattern
   - Updated main.dart comments to reference ADR-001

2. BLoC Wiring Strategy (ADR-002):
   - ✅ ACCEPTED: App-level only for truly shared BLoCs
   - App-level: AuthBloc, ProfileBloc, GamificationBloc (NEW)
   - Screen-level: NavigationBloc, VenueBloc, BookingBloc, PaymentBloc
   - Rationale: Memory efficiency, better testing, clear boundaries

UNDOCUMENTED FEATURES DOCUMENTED IN PRD-001:

Added comprehensive documentation for 3 previously undocumented features:

1. Cultural Calendar & Astronomical Features (Section 3.2):
   - astronomical_service.dart (392 lines)
   - Moon phase tracking (8 phases)
   - Sunrise/sunset calculations (Julian Day algorit

--- a/docs/business/prd-001.md
+++ b/docs/business/prd-001.md
@@ -87,8 +87,178 @@ To create Morocco's leading lifestyle super app that seamlessly connects users w
 | Social Features | P1 | Medium | Medium | v1.2 |
 | Event Management | P0 | Critical | Critical | v1.1 |
 | Scanner Apps | P0 | Critical | High | v1.1 |
+| Cultural Calendar | P1 | High | Medium | MVP ✅ |
+| Astronomical Service | P2 | Medium | Low | MVP ✅ |
+| Multi-Language Profiles | P1 | High | Medium | MVP ✅ |
+| Admin Data Tools | P2 | Low | Low | MVP ✅ |
 
-### **3.2 QR Code Ticketing Platform** *(New Section)*
+### **3.2 Cultural Calendar & Astronomical Features** *(Implemented - Oct 2025)*
+
+#### **3.2.1 Cultural Differentiation**
+
+**Market Insight**: Morocco's diverse cultural landscape requires sensitivity to multiple cultural calendars and traditions. This feature provides localized holiday tracking and astronomical information across all supported languages.
+
+**Implemented Capabilities**:
+- ✅ Moon phase tracking with visual indicators
+- ✅ Sunrise/sunset calculations for location-based features
+- ✅ Solstices and equinoxes tracking
+- ✅ Multi-locale holiday calendar (5 languages)
+- ✅ Geolocation integration for astronomical calculations
+
+**Holiday Support by Locale**:
+| Locale | Holidays Supported | Cultural Alignment |
+|--------|-------------------|-------------------|
+| Arabic (ar) | International + Regional | Moroccan/Saudi holidays |
+| English (en) | International + US | Western cultural events |
+| Spanish (es) | International + Spanish | Hispanic cultural events |
+| French (fr) | International + French | French national holidays |
+| Portuguese (pt) | International + Portuguese | Portuguese national days |
+
+**Use Cases**:
+1. **Event Planning**: Avoid scheduling events on cultural holidays
+2. **Venue Operations**: Adjust hours for religious/cultural observances
+3. **User Engagement**: Celebrate cultural moments with users
+4. **Content Relevance**: Surface holiday-specific recommendations
+
+**Technical Implementation**:
+- Service: `lib/services/astronomical_service.dart` (392 lines)
+- Dependencies: `lunar: ^1.7.5`, `geolocator: ^13.0.2`
+- Astronomical calculations: Julian Day conversions, sun position algorithms
+- Location services: User position for sunrise/sunset calculations
+
+**Requirements**:
+- REQ-CULT-001: Support moon phase display with 8 phases
+- REQ-CULT-002: Calculate sunrise/sunset within 2-minute accuracy
+- REQ-CULT-003: Provide holidays for all 5 supported languages
+- REQ-CULT-004: Handle polar day/night edge cases
+- REQ-CULT-005: Geolocation permission handling with graceful fallbacks
+
+**Future Enhancements** (Phase 2):
+- [ ] Islamic prayer times based on location
+- [ ] Hijri calendar integration
+- [ ] Ramadan observance features
+- [ ] Cultural event recommendations based on holidays
+- [ ] Venue decoration suggestions for cultural events
+
+**Competitive Advantage**:
+This feature differentiates Yajid from generic venue apps by respecting and celebrating Morocco's multicultural identity. Users feel the app "understands" their cultural context.
+
+---
+
+### **3.2.2 Multi-Language Profile Management** *(Implemented - Oct 2025)*
+
+**Market Insight**: In multicultural markets like Morocco (Arabic/French bilingual with growing English use), users often want to present their identity differently across language contexts.
+
+**Implemented Capabilities**:
+- ✅ Dedicated profile editing screen (`EditProfileScreen`)
+- ✅ Separate display names for each supported language:
+  - English (en)
+  - Arabic (ar)
+  - Spanish (es)
+  - French (fr)
+  - Portuguese (pt)
+- ✅ Real-time validation and save feedback
+- ✅ Graceful handling of incomplete translations (fallback to primary name)
+
+**Use Cases**:
+1. **Professional Identity**: User wants French name for business contexts, Arabic name for family
+2. **Cultural Expression**: User prefers traditional Arabic spelling in ar locale, westernized in en
+3. **Nickname Support**: Different nicknames across cultural contexts
+4. **Accessibility**: Names displayed correctly regardless of user's language setting
+
+**Technical Implementation**:
+- Screen: `lib/screens/edit_profile_screen.dart` (200+ lines)
+- Service Integration: `UserProfileService.updatePersonalInfo()`
+- Form Validation: Empty string handling with null coalescing
+- User Feedback: Success/error snackbars with floating behavior
+
+**Requirements**:
+- REQ-PROF-001: Support 5 language-specific name fields
+- REQ-PROF-002: Validate at least one name is provided (fallback to English)
+- REQ-PROF-003: Save profile updates with optimistic UI
+- REQ-PROF-004: Display appropriate name based on current locale
+- REQ-PROF-005: Return success indicator to calling screen
+
+**User Experience**:
+```
+Profile Screen -> Edit Button -> EditProfileScreen
+  ├─ Name (English): John Smith
+  ├─ Name (Arabic): جون سميث
+  ├─ Name (Spanish): Juan Smith
+  ├─ Name (French): Jean Smith
+  ├─ Name (Portuguese): João Smith
+  └─ [Save Button] -> Success message -> Return to profile
+```
+
+**Future Enhancements** (Phase 2):
+- [ ] AI-powered name translation suggestions
+- [ ] Pronunciation guides for each name variant
+- [ ] Cultural name format validation (e.g., Arabic name order)
+- [ ] Display name history/audit log
+
+---
+
+### **3.2.3 Admin Data Management Tools** *(Implemented - Oct 2025)*
+
+**Purpose**: Development and testing utility for initializing and managing platform data.
+
+**Implemented Capabilities**:
+- ✅ Recommendation data seeding (`AdminSeedScreen`)
+- ✅ Progress tracking with success/failure counts
+- ✅ Sample data across all 11 recommendation categories
+- ✅ Pre-populated realistic content (movies, music, books, etc.)
+
+**Access Control**:
+- Location: Settings > Advanced > Seed Data
+- **Security Note**: Should be restricted to admin users only in production
+- Currently accessible to all users (development mode)
+
+**Seed Data Includes**:
+- Movies: 10+ titles with ratings, tags, platforms
+- Music: 10+ tracks/albums with artist info
+- Books: 10+ titles with authors and genres
+- TV Shows: 10+ series with episode information
+- Podcasts: Sample episodes across categories
+- Sports: Events and teams
+- Video Games: Popular titles with platforms
+- Brands: Recommended brands and products
+- Recipes: Cuisine types with ingredients
+- Events: Sample cultural and entertainment events
+- Activities: Recreation suggestions
+- Businesses: Local venue recommendations
+
+**Technical Implementation**:
+- Screen: `lib/screens/admin_seed_screen.dart` (300+ lines)
+- Service: `RecommendationService.addRecommendation()`
+- Progress UI: Real-time counter with status messages
+- Batch Processing: Sequential uploads with error handling
+
+**Requirements**:
+- REQ-ADMIN-001: Seed minimum 24 recommendations (11 categories × 2+ items)
+- REQ-ADMIN-002: Display real-time progress during seeding
+- REQ-ADMIN-003: Report success/failure counts
+- REQ-ADMIN-004: Handle duplicate data gracefully
+- REQ-ADMIN-005: Complete seeding operation even if some items fail
+
+**Security Considerations** (Phase 2):
+- [ ] Add admin role verification
+- [ ] Remove from production builds (dev-only feature flag)
+- [ ] Add authentication check before access
+- [ ] Audit log all admin operations
+- [ ] Add data deletion/reset capabilities
+
+**Alternative Approach** (Production):
+Instead of in-app admin screen, consider:
+- Firebase Console for data management
+- Cloud Functions for automated data seeding
+- CSV import tools for bulk operations
+- Admin web dashboard (separate from user app)
+
+**Current Status**: ⚠️ Development tool - **Must add access control before production**
+
+---
+
+### **3.3 QR Code Ticketing Platform** *(Planned - Phase 2)*
 
 #### **3.2.1 Event Organizer Features**
 
